--- a/Knapsack.Core/Knapsack.Core.csproj
+++ b/Knapsack.Core/Knapsack.Core.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Knapsack.Core</RootNamespace>
     <AssemblyName>Knapsack.Core</AssemblyName>
-    <TargetFrameworkVersion>3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
